# sf-quant

./: .gitignore  README.md  bai_weights.xlsx  contributions.csv  demo_functions.ipynb  download_all_files.sh  janus_henderson_ai_etf.csv  portfolio_exposure_results.csv  pyproject.toml  test.py  test_performance_functions.ipynb
docs/: conf.py  index.rst
docs/reference/: backtester.rst  data.rst  optimizer.rst  performance.rst  research.rst
docs/reference/backtester/: sf_quant.backtester.dynamic_backtest_parallel.rst  sf_quant.backtester.dynamic_parallel.rst
docs/reference/data/: sf_quant.data.construct_factor_model_components.rst  sf_quant.data.get_alpha_names.rst  sf_quant.data.get_covariances_columns.rst  sf_quant.data.get_crsp_v2_daily_columns.rst  sf_quant.data.get_crsp_v2_monthly_columns.rst  sf_quant.data.get_fama_french_columns.rst  sf_quant.data.get_score_names.rst  sf_quant.data.get_signal_names.rst  sf_quant.data.load_alphas.rst  sf_quant.data.load_alphas_by_date.rst  sf_quant.data.load_benchmark_returns.rst  sf_quant.data.load_composite_alphas.rst  sf_quant.data.load_composite_alphas_by_date.rst  sf_quant.data.load_covariances_by_date.rst  sf_quant.data.load_crsp_v2_daily.rst  sf_quant.data.load_crsp_v2_monthly.rst  sf_quant.data.load_exposures_by_date.rst  sf_quant.data.load_fama_french.rst  sf_quant.data.load_scores.rst  sf_quant.data.load_scores_by_date.rst  sf_quant.data.load_signals.rst  sf_quant.data.load_signals_by_date.rst
docs/reference/optimizer/: sf_quant.optimizer.ZeroInvestment.rst  (+1 more)
src/sf_quant/: __init__.py
src/sf_quant/data/: _views.py  (+19 more)
(+47 files in other folders)
